@@ -97,7 +97,7 @@ from PyQt4 import QtGui
 
 from vitables.preferences import configException
 import vitables.utils
-import vitables.vttables.dataSheet as dataSheet
+import vitables.vttables.datasheet as datasheet
 
 translate = QtGui.QApplication.translate
 
@@ -533,7 +533,7 @@ class Config(QtCore.QSettings):
         # Get the list of views
         workspace = self.vtapp.gui.workspace
         node_views = [window for window in workspace.subWindowList() \
-                        if isinstance(window, dataSheet.DataSheet)]
+                        if isinstance(window, datasheet.DataSheet)]
 
         # Get the list of open files (temporary database is not included)
         dbt_model = self.vtapp.gui.dbs_tree_model
